--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="demo"></div>
 
     <div class="setup-open">
-      <img src="img/user-1.jpg" class="setup-open-icon" alt="Button to open setup window">
+      <img src="img/user-1.jpg" class="setup-open-icon" alt="Button to open setup window" tabindex="0">
     </div>
   </header>
 
@@ -75,9 +75,8 @@
           </label>
         </div>
 
-        <span class="setup-close">×</span>
+        <span class="setup-close" tabindex="0">×</span>
       </div>
-
 
       <div class="setup-artifacts-shop">
         <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" draggable="true" width="65" height="50">
