--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="setup-user">
           <div class="upload">
             <img class="setup-user-pic" src="img/user-1.jpg" alt="User avatar">
-            <input type="file" name="avatar">
+            <input type="file" name="avatar" accept="image/png, image/jpeg">
           </div>
           <label class="setup-wizard-form__element">
             <input type="text" class="setup-user-name" value="Синий Пендальф" name="username" minlength="2" maxlength="25" data-pristine-required-message="Обязательное поле" data-pristine-minlength-message="Минимальная длина 2 символа" data-pristine-maxlength-message="Максимальная длина 25 символов" required>
